修改設定檔

--- a/WebAPI1/Dockerfile
+++ b/WebAPI1/Dockerfile
@@ -38,6 +38,13 @@ RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 ENV Logging__LogLevel__Default=Information \
     Logging__LogLevel__Microsoft.AspNetCore=Warning \
     AllowedHosts=* \
+    JwtSettings__ValidateIssuer=true \
+    JwtSettings__ValidateAudience=true \
+    JwtSettings__ValidateLifetime=true \
+    JwtSettings__Key= \
+    JwtSettings__Issuer= \
+    JwtSettings__Audience= \
+    ConnectionStrings__WebDatabase= \
     ConnectionStrings__Redis=kpi_redis:6380,password=MyP@ssw0rd123,abortConnect=false,connectRetry=3
 
 ENTRYPOINT ["dotnet", "WebAPI1.dll"]
