--- a/WebAPI1/WebAPI1/appsettings.json
+++ b/WebAPI1/WebAPI1/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebDatabase":"",
+    "WebDatabase": "Server=192.168.50.104;Database=isha_kpi;User ID=sa;Password=MyP@ssw0rd123;TrustServerCertificate=true",
 
     "Redis": "kpi_redis:6380,password=MyP@ssw0rd123,abortConnect=false,connectRetry=3"
   },
