--- a/WebAPI1/WebAPI1/appsettings.json
+++ b/WebAPI1/WebAPI1/appsettings.json
@@ -17,6 +17,7 @@
     "ValidateLifetime": true,
     "Key": "bXktc2VjcmV0LXNlY3JldC1rZXktMTIzNDU=",
     "Issuer": "http://localhost:5013/",
-    "Audience": "http://localhost:3000/"
+    "Audience": "http://localhost:3000/",
+    "Expires": "30"
   }
 }
