--- a/WebAPI1/WebAPI1/appsettings.json
+++ b/WebAPI1/WebAPI1/appsettings.json
@@ -8,8 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "WebDatabase": "Server=192.168.50.199;Database=isha_kpi;User ID=piau;Password=Ellawi209876;TrustServerCertificate=true",
-
-    "Redis": "kpi_redis:6380,password=MyP@ssw0rd123,abortConnect=false,connectRetry=3"
+    "Redis": "172.19.255.105:6379,password=Ellawi209876,abortConnect=false,ssl=False,connectRetry=3"
   },
   "JwtSettings": {
     "ValidateIssuer": true,
@@ -19,5 +18,14 @@
     "Issuer": "http://localhost:5013/",
     "Audience": "http://localhost:3000/",
     "Expires": "30"
-  }
+  },
+  "Email_Setting": {
+    "SmtpServer": "mail.isha.org.tw",
+    "SmtpPort": 25,
+    "SmtpUsername":"isha_khh",
+    "SmtpPassword": "Isha04861064",
+    "FromEmail": "isha_khh@mail.isha.org.tw",
+    "FromName": "績效指標資料庫",
+    "EnableSsl": true
+  },
 }
